WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200494
[JSC] sampling-profiler can see garbage Wasm::Callee* pointer which is HashTable deleted / empty values
https://bugs.webkit.org/show_bug.cgi?id=200494
Summary
[JSC] sampling-profiler can see garbage Wasm::Callee* pointer which is HashTa...
Yusuke Suzuki
Reported
2019-08-06 19:42:29 PDT
[JSC] sampling-profiler can see garbage Wasm::Callee* pointer which is HashTable delete / empty values
Attachments
Patch
(1.62 KB, patch)
2019-08-06 19:45 PDT
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2019-08-06 19:45:08 PDT
Created
attachment 375679
[details]
Patch
Saam Barati
Comment 2
2019-08-06 19:46:43 PDT
Comment on
attachment 375679
[details]
Patch nice. r=me
Yusuke Suzuki
Comment 3
2019-08-06 19:48:11 PDT
Committed
r248337
: <
https://trac.webkit.org/changeset/248337
>
Radar WebKit Bug Importer
Comment 4
2019-08-06 19:49:16 PDT
<
rdar://problem/54016109
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug